--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
     <title>Italian food</title>
 </head>
-
+<!--Start body-->
 <body>
 
 
@@ -279,5 +279,5 @@
     <!-- <script src="./js/slick.min.js"></script> -->
     <script src="./js/script.js"></script>
 </body>
-
+<!--The end project-->
 </html>
